Adding support for Images from resources (#202)
* Adding roger ( ResOurceGEneatoR)
* Fixing Retina on Mac
* Adding support for loading Lottie animations from Resources
* Fixing re-layout on mac::TextView change
* Fixing mac::Window geometry.onChange due to user interaction